--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ a:hover {
 }
 
 #bloc-2-services p {
-    font-size: 11px;
+    font-size: 14px 
 }
 
 .navbar {
@@ -327,6 +327,7 @@ a:hover {
     margin-top: 4px;
     font-size: 16px;
 }
+
 
 .navbar-nav .open .dropdown-menu > li > a {
     text-align: inherit;
@@ -645,13 +646,21 @@ h3,
 h4,
 h5,
 h6,
-p,
 label,
-.btn,
-a {
+.btn 
+    {
     font-family: "helvetica";
     font-weight: 400;
-    color: #b7b7b7!important;
+    color: #e2e2e2!important;
+    /* just finished making footers contrast able to see. Now making the rest of other code able to see. */
+}
+.list_not_in_order {
+    font-family: "helvetica";
+    font-weight: 400;
+    color: #e2e2e2!important;
+}
+.paragraph-center {
+    color: #585858;
 }
 
 .container {
@@ -677,7 +686,7 @@ a {
 }
 
 p {
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .tight-width-whitespace {
@@ -781,7 +790,7 @@ h4 {
 }
 
 .tc-white {
-    color: #364577!important;
+    color: #ffffff!important;
 }
 
 .btn-atomic-tangerine {
