made huge coding changes

--- a/style.css
+++ b/style.css
@@ -833,11 +833,11 @@ h4 {
 }
 
 .bg-atlanta-20made-20sign {
-    background-image: url("img/new_compression_photos/atlanta\ made\ sign.webp");
+    background-image: url("img/new_compression_photos/atlanta\ made\ sign\ Large.jpeg");
 }
 
 .bg-atlanta-20made-20sign-20orange {
-    background-image: url("img/new_compression_photos/atlanta\ made\ sign\ orange.webp");
+    background-image: url("img/new_compression_photos/atlanta\ made\ sign\ orange\ Large.jpeg")
 }
 
 @media (max-width: 1024px) {
