--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1373,7 +1373,8 @@ th {
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
 :after,
@@ -1424,7 +1425,7 @@ figure {
 }
 
 img {
-  vertical-align: middle
+  margin-left: 10px;
 }
 
 .carousel-inner>.item>a>img,
@@ -1655,7 +1656,8 @@ mark {
 }
 
 .text-center {
-  text-align: center
+  text-align: center;
+  color: black;
 }
 
 .text-justify {
