--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3,14 +3,28 @@
  * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */ /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+.btn,
+.label,
+.text-center {
+  text-align: center;
+}
+.btn,
+.dropdown-header,
+.label {
+  white-space: nowrap;
+}
+.btn,
+[role="button"],
+button {
+  cursor: pointer;
+}
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
-body {
-  margin: 0;
-}
+.collapse.in,
+.navbar-brand > img,
 footer,
 header,
 main,
@@ -18,12 +32,16 @@ nav,
 section {
   display: block;
 }
+.collapse,
+.label:empty,
 [hidden] {
   display: none;
 }
 a {
   background-color: transparent;
 }
+.dropdown-toggle:focus,
+.navbar-toggle:focus,
 a:active,
 a:hover {
   outline: 0;
@@ -33,28 +51,18 @@ b {
 }
 h1 {
   margin: 0.67em 0;
-  font-size: 2em;
-}
-small {
-  font-size: 80%;
 }
 img {
   border: 0;
+  margin-left: 24px;
 }
 button {
   margin: 0;
   font: inherit;
   color: inherit;
-}
-button {
   overflow: visible;
-}
-button {
   text-transform: none;
-}
-button {
   appearance: button;
-  cursor: pointer;
 }
 button[disabled] {
   cursor: default;
@@ -86,8 +94,6 @@ button::-moz-focus-inner {
   }
   img {
     page-break-inside: avoid;
-  }
-  img {
     max-width: 100% !important;
   }
   h2,
@@ -106,6 +112,11 @@ button::-moz-focus-inner {
   .label {
     border: 1px solid #000;
   }
+}
+.btn,
+.btn:active,
+.navbar-toggle {
+  background-image: none;
 }
 @font-face {
   font-family: "Glyphicons Halflings";
@@ -138,6 +149,7 @@ html {
   -webkit-tap-highlight-color: transparent;
 }
 body {
+  margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
@@ -155,12 +167,9 @@ a:hover {
   text-decoration: underline;
 }
 a:focus {
-  outline: thin dotted;
-  outline: 5px auto -webkit-focus-ring-color;
+  outline: dotted thin;
+  outline: -webkit-focus-ring-color auto 5px;
   outline-offset: -2px;
-}
-img {
-  margin-left: 24px;
 }
 .img-responsive {
   display: block;
@@ -176,8 +185,13 @@ img {
   clip: rect(0, 0, 0, 0);
   border: 0;
 }
-[role="button"] {
-  cursor: pointer;
+.btn .label,
+.dropdown,
+.nav > li,
+.nav > li > a,
+.navbar,
+.navbar-toggle {
+  position: relative;
 }
 .h1,
 .h2,
@@ -195,6 +209,10 @@ h6 {
   font-weight: 500;
   line-height: 1.1;
   color: inherit;
+}
+.btn,
+.btn-link {
+  font-weight: 400;
 }
 .h1 .small,
 .h1 small,
@@ -250,6 +268,7 @@ h3 small {
 .h4,
 .h5,
 .h6,
+.navbar-btn.btn-sm,
 h4,
 h5,
 h6 {
@@ -302,7 +321,6 @@ small {
   font-size: 85%;
 }
 .text-center {
-  text-align: center;
   color: #000;
 }
 .page-header {
@@ -310,9 +328,16 @@ small {
   margin: 40px 0 20px;
   border-bottom: 1px solid #eee;
 }
+.help-block,
+ul {
+  margin-bottom: 10px;
+}
+.btn-block + .btn-block,
+.help-block {
+  margin-top: 5px;
+}
 ul {
   margin-top: 0;
-  margin-bottom: 10px;
 }
 ul ul {
   margin-bottom: 0;
@@ -328,16 +353,8 @@ ul ul {
     width: 750px;
   }
 }
-@media (min-width: 992px) {
-  .container {
-    width: 970px;
-  }
-}
-@media (min-width: 1200px) {
-  .container {
-    width: 1170px;
-  }
-}
+.container > .navbar-collapse,
+.container > .navbar-header,
 .row {
   margin-right: -15px;
   margin-left: -15px;
@@ -412,6 +429,7 @@ ul ul {
 .col-xs-9 {
   float: left;
 }
+.col-sm-6,
 .col-xs-12 {
   width: 100%;
 }
@@ -526,144 +544,10 @@ ul ul {
 .col-xs-offset-0 {
   margin-left: 0;
 }
-.col-sm-6 {
-  width: 100%;
-}
-@media (min-width: 768px) {
-  .col-sm-1,
-  .col-sm-10,
-  .col-sm-11,
-  .col-sm-12,
-  .col-sm-2,
-  .col-sm-23,
-  .col-sm-3,
-  .col-sm-4,
-  .col-sm-5,
-  .col-sm-6,
-  .col-sm-7,
-  .col-sm-8,
-  .col-sm-9 {
-    float: left;
-  }
-  .col-sm-12 {
-    width: 100%;
-  }
-  .col-sm-11 {
-    width: 91.66666667%;
-  }
-  .col-sm-10 {
-    width: 83.33333333%;
-  }
-  .col-sm-9 {
-    width: 75%;
-  }
-  .col-sm-8 {
-    width: 66.66666667%;
-  }
-  .col-sm-7 {
-    width: 58.33333333%;
-  }
-  .col-sm-6 {
-    width: 50%;
-  }
-  .col-sm-23 {
-    width: 47%;
-  }
-  .col-sm-5 {
-    width: 41.66666667%;
-  }
-  .col-sm-4 {
-    width: 33.33333333%;
-  }
-  .col-sm-3 {
-    width: 25%;
-  }
-  .col-sm-2 {
-    width: 16.66666667%;
-  }
-  .col-sm-1 {
-    width: 8.33333333%;
-  }
-  .col-sm-push-12 {
-    left: 100%;
-  }
-  .col-sm-push-11 {
-    left: 91.66666667%;
-  }
-  .col-sm-push-10 {
-    left: 83.33333333%;
-  }
-  .col-sm-push-9 {
-    left: 75%;
-  }
-  .col-sm-push-8 {
-    left: 66.66666667%;
-  }
-  .col-sm-push-7 {
-    left: 58.33333333%;
-  }
-  .col-sm-push-6 {
-    left: 50%;
-  }
-  .col-sm-push-5 {
-    left: 41.66666667%;
-  }
-  .col-sm-push-4 {
-    left: 33.33333333%;
-  }
-  .col-sm-push-3 {
-    left: 25%;
-  }
-  .col-sm-push-2 {
-    left: 16.66666667%;
-  }
-  .col-sm-push-1 {
-    left: 8.33333333%;
-  }
-  .col-sm-push-0 {
-    left: auto;
-  }
-  .col-sm-offset-12 {
-    margin-left: 100%;
-  }
-  .col-sm-offset-11 {
-    margin-left: 91.66666667%;
-  }
-  .col-sm-offset-10 {
-    margin-left: 83.33333333%;
-  }
-  .col-sm-offset-9 {
-    margin-left: 75%;
-  }
-  .col-sm-offset-8 {
-    margin-left: 66.66666667%;
-  }
-  .col-sm-offset-7 {
-    margin-left: 58.33333333%;
-  }
-  .col-sm-offset-6 {
-    margin-left: 50%;
-  }
-  .col-sm-offset-5 {
-    margin-left: 41.66666667%;
-  }
-  .col-sm-offset-4 {
-    margin-left: 33.33333333%;
-  }
-  .col-sm-offset-3 {
-    margin-left: 25%;
-  }
-  .col-sm-offset-2 {
-    margin-left: 16.66666667%;
-  }
-  .col-sm-offset-1 {
-    margin-left: 8.33333333%;
-  }
-  .col-sm-offset-0 {
-    margin-left: 0;
-  }
-}
 @media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
   .col-md-1,
   .col-md-10,
   .col-md-11,
@@ -794,6 +678,9 @@ ul ul {
   }
 }
 @media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
   .col-lg-1,
   .col-lg-10,
   .col-lg-11,
@@ -937,36 +824,32 @@ label {
 }
 .help-block {
   display: block;
-  margin-top: 5px;
-  margin-bottom: 10px;
   color: #737373;
+}
+.btn,
+.nav {
+  margin-bottom: 0;
 }
 .btn {
   display: inline-block;
   padding: 6px 12px;
-  margin-bottom: 0;
   font-size: 14px;
-  font-weight: 400;
   line-height: 1.42857143;
-  text-align: center;
-  white-space: nowrap;
   vertical-align: middle;
   -ms-touch-action: manipulation;
   touch-action: manipulation;
-  cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-image: none;
   border: 1px solid transparent;
   border-radius: 4px;
 }
 .btn:active.focus,
 .btn:active:focus,
 .btn:focus {
-  outline: thin dotted;
-  outline: 5px auto -webkit-focus-ring-color;
+  outline: dotted thin;
+  outline: -webkit-focus-ring-color auto 5px;
   outline-offset: -2px;
 }
 .btn:focus,
@@ -975,7 +858,6 @@ label {
   text-decoration: none;
 }
 .btn:active {
-  background-image: none;
   outline: 0;
   -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -987,7 +869,6 @@ label {
   opacity: 0.65;
 }
 .btn-link {
-  font-weight: 400;
   color: #337ab7;
   border-radius: 0;
 }
@@ -1021,36 +902,21 @@ label {
   line-height: 1.3333333;
   border-radius: 6px;
 }
-.btn-sm {
-  padding: 5px 10px;
-  font-size: 12px;
+.btn-sm,
+.btn-xs {
   line-height: 1.5;
   border-radius: 3px;
+  font-size: 12px;
+}
+.btn-sm {
+  padding: 5px 10px;
 }
 .btn-xs {
   padding: 1px 5px;
-  font-size: 12px;
-  line-height: 1.5;
-  border-radius: 3px;
 }
 .btn-block {
   display: block;
   width: 100%;
-}
-.btn-block + .btn-block {
-  margin-top: 5px;
-}
-.collapse {
-  display: none;
-}
-.collapse.in {
-  display: block;
-}
-.dropdown {
-  position: relative;
-}
-.dropdown-toggle:focus {
-  outline: 0;
 }
 .dropdown-header {
   display: block;
@@ -1058,19 +924,15 @@ label {
   font-size: 12px;
   line-height: 1.42857143;
   color: #777;
-  white-space: nowrap;
 }
 .nav {
   padding-left: 0;
-  margin-bottom: 0;
   list-style: none;
 }
 .nav > li {
-  position: relative;
   display: block;
 }
 .nav > li > a {
-  position: relative;
   display: block;
   padding: 10px 15px;
 }
@@ -1083,20 +945,9 @@ label {
   max-width: none;
 }
 .navbar {
-  position: relative;
   min-height: 50px;
   margin-bottom: 20px;
   border: 1px solid transparent;
-}
-@media (min-width: 768px) {
-  .navbar {
-    border-radius: 4px;
-  }
-}
-@media (min-width: 768px) {
-  .navbar-header {
-    float: left;
-  }
 }
 .navbar-collapse {
   padding-right: 15px;
@@ -1110,7 +961,194 @@ label {
 .navbar-collapse.in {
   overflow-y: auto;
 }
+.navbar-brand {
+  float: left;
+  height: 50px;
+  padding: 15px;
+  font-size: 18px;
+  line-height: 20px;
+}
+.navbar-brand:focus,
+.navbar-brand:hover {
+  text-decoration: none;
+}
+.navbar-toggle {
+  float: right;
+  padding: 9px 10px;
+  margin-top: 8px;
+  margin-right: 15px;
+  margin-bottom: 8px;
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+.navbar-toggle .icon-bar {
+  display: block;
+  width: 22px;
+  height: 2px;
+  border-radius: 1px;
+}
+.navbar-toggle .icon-bar + .icon-bar {
+  margin-top: 4px;
+}
+.navbar-nav {
+  margin: 7.5px -15px;
+}
+.navbar-nav > li > a {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  line-height: 20px;
+}
+.navbar-btn {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+.navbar-btn.btn-xs {
+  margin-top: 14px;
+  margin-bottom: 14px;
+}
+.navbar-text {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
 @media (min-width: 768px) {
+  .col-sm-1,
+  .col-sm-10,
+  .col-sm-11,
+  .col-sm-12,
+  .col-sm-2,
+  .col-sm-23,
+  .col-sm-3,
+  .col-sm-4,
+  .col-sm-5,
+  .col-sm-6,
+  .col-sm-7,
+  .col-sm-8,
+  .col-sm-9,
+  .navbar-header,
+  .navbar-nav > li {
+    float: left;
+  }
+  .col-sm-12 {
+    width: 100%;
+  }
+  .col-sm-11 {
+    width: 91.66666667%;
+  }
+  .col-sm-10 {
+    width: 83.33333333%;
+  }
+  .col-sm-9 {
+    width: 75%;
+  }
+  .col-sm-8 {
+    width: 66.66666667%;
+  }
+  .col-sm-7 {
+    width: 58.33333333%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-23 {
+    width: 47%;
+  }
+  .col-sm-5 {
+    width: 41.66666667%;
+  }
+  .col-sm-4 {
+    width: 33.33333333%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-2 {
+    width: 16.66666667%;
+  }
+  .col-sm-1 {
+    width: 8.33333333%;
+  }
+  .col-sm-push-12 {
+    left: 100%;
+  }
+  .col-sm-push-11 {
+    left: 91.66666667%;
+  }
+  .col-sm-push-10 {
+    left: 83.33333333%;
+  }
+  .col-sm-push-9 {
+    left: 75%;
+  }
+  .col-sm-push-8 {
+    left: 66.66666667%;
+  }
+  .col-sm-push-7 {
+    left: 58.33333333%;
+  }
+  .col-sm-push-6 {
+    left: 50%;
+  }
+  .col-sm-push-5 {
+    left: 41.66666667%;
+  }
+  .col-sm-push-4 {
+    left: 33.33333333%;
+  }
+  .col-sm-push-3 {
+    left: 25%;
+  }
+  .col-sm-push-2 {
+    left: 16.66666667%;
+  }
+  .col-sm-push-1 {
+    left: 8.33333333%;
+  }
+  .col-sm-push-0 {
+    left: auto;
+  }
+  .col-sm-offset-12 {
+    margin-left: 100%;
+  }
+  .col-sm-offset-11 {
+    margin-left: 91.66666667%;
+  }
+  .col-sm-offset-10 {
+    margin-left: 83.33333333%;
+  }
+  .col-sm-offset-9 {
+    margin-left: 75%;
+  }
+  .col-sm-offset-8 {
+    margin-left: 66.66666667%;
+  }
+  .col-sm-offset-7 {
+    margin-left: 58.33333333%;
+  }
+  .col-sm-offset-6 {
+    margin-left: 50%;
+  }
+  .col-sm-offset-5 {
+    margin-left: 41.66666667%;
+  }
+  .col-sm-offset-4 {
+    margin-left: 33.33333333%;
+  }
+  .col-sm-offset-3 {
+    margin-left: 25%;
+  }
+  .col-sm-offset-2 {
+    margin-left: 16.66666667%;
+  }
+  .col-sm-offset-1 {
+    margin-left: 8.33333333%;
+  }
+  .col-sm-offset-0 {
+    margin-left: 0;
+  }
+  .navbar {
+    border-radius: 4px;
+  }
   .navbar-collapse {
     width: auto;
     border-top: 0;
@@ -1126,105 +1164,25 @@ label {
   .navbar-collapse.in {
     overflow-y: visible;
   }
-}
-.container > .navbar-collapse,
-.container > .navbar-header {
-  margin-right: -15px;
-  margin-left: -15px;
-}
-@media (min-width: 768px) {
   .container > .navbar-collapse,
   .container > .navbar-header {
     margin-right: 0;
     margin-left: 0;
   }
-}
-.navbar-brand {
-  float: left;
-  height: 50px;
-  padding: 15px 15px;
-  font-size: 18px;
-  line-height: 20px;
-}
-.navbar-brand:focus,
-.navbar-brand:hover {
-  text-decoration: none;
-}
-.navbar-brand > img {
-  display: block;
-}
-@media (min-width: 768px) {
   .navbar > .container .navbar-brand {
     margin-left: -15px;
   }
-}
-.navbar-toggle {
-  position: relative;
-  float: right;
-  padding: 9px 10px;
-  margin-top: 8px;
-  margin-right: 15px;
-  margin-bottom: 8px;
-  background-color: transparent;
-  background-image: none;
-  border: 1px solid transparent;
-  border-radius: 4px;
-}
-.navbar-toggle:focus {
-  outline: 0;
-}
-.navbar-toggle .icon-bar {
-  display: block;
-  width: 22px;
-  height: 2px;
-  border-radius: 1px;
-}
-.navbar-toggle .icon-bar + .icon-bar {
-  margin-top: 4px;
-}
-@media (min-width: 768px) {
   .navbar-toggle {
     display: none;
   }
-}
-.navbar-nav {
-  margin: 7.5px -15px;
-}
-.navbar-nav > li > a {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  line-height: 20px;
-}
-@media (min-width: 768px) {
   .navbar-nav {
     float: left;
     margin: 0;
-  }
-  .navbar-nav > li {
-    float: left;
   }
   .navbar-nav > li > a {
     padding-top: 15px;
     padding-bottom: 15px;
   }
-}
-.navbar-btn {
-  margin-top: 8px;
-  margin-bottom: 8px;
-}
-.navbar-btn.btn-sm {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.navbar-btn.btn-xs {
-  margin-top: 14px;
-  margin-bottom: 14px;
-}
-.navbar-text {
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-@media (min-width: 768px) {
   .navbar-text {
     float: left;
     margin-right: 15px;
@@ -1238,8 +1196,6 @@ label {
   font-weight: 700;
   line-height: 1;
   color: #fff;
-  text-align: center;
-  white-space: nowrap;
   vertical-align: baseline;
   border-radius: 0.25em;
 }
@@ -1249,11 +1205,7 @@ a.label:hover {
   text-decoration: none;
   cursor: pointer;
 }
-.label:empty {
-  display: none;
-}
 .btn .label {
-  position: relative;
   top: -1px;
 }
 @-webkit-keyframes progress-bar-stripes {
