--- a/style.css
+++ b/style.css
@@ -545,6 +545,11 @@ h3 {
   .text-to-edit {
     font-size: 24px;
   }
+
+  img {
+    border: 0;
+    margin-left: 0px;
+}
   .page-container {
     overflow-x: hidden;
     position: relative;
